<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.quiriletelese.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.quiriletelese.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/restaurant"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.quiriletelese.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/hotel"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.quiriletelese.navigationdrawer.ui.tools.ToolsFragment"
        android:label="@string/attractions"
        tools:layout="@layout/fragment_tools" />

</navigation>